modules/security_groups/http_ssh.tf
variable "env"        { }

resource "aws_security_group" "http_ssh" {
  name        = "http_ssh-${var.env}"
  description = "Allow HTTP and SSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

output "id" {
  value = "${aws_security_group.http_ssh.name}"
}
